2009-11-27  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.56-1
	* device-mapper 1.02.40-1
	* Upstream update

2009-10-31  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.54-1
	* device-mapper 1.02.39-1
	* Upstream update
	* Enabled the device-mapper event daemon
	* Moved the udev rule from /etc to /lib

2009-09-27  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.53-1
	* device-mapper 1.02.38-1
	* Upstream update

2009-09-18  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.52-1
	* device-mapper 1.02.37-1
	* Upstream update
	* Implemented split packages
	* PKGBUILD clean up
	* Renamed pkgconfig file (close FS#15909)

2009-07-09  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.48-1
	* device-mapper 1.02.33-1
	* Upstream update
	* Removed unneeded readline depends (close FS#15205)

2009-05-24  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.47-1
	* device-mapper 1.02.32-1
	* Upstream update
	* Added dmsetup.static

2009-03-07  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.45-1
	* device-mapper 1.02.31-1
	* Upstream update

2009-01-31  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.44-1
	* device-mapper 1.02.30-1
	* Upstream update
	* Added bash depends
	* Added readline depends
        * Added pkgconfig file

2008-11-11  Eric Belanger  <eric@archlinux.org>

	* lvm2 2.02.43-1
	* device-mapper 1.02.29-1
	* Upstream update
	* Disabled SMP build
	* Added ChangeLog