@@ -1,3 +1,7 @@
+2010-01-24  Thomas Bächler <thomas@archlinux.org>
+        * lvm2/device-mapper update to 2.02.60-1
+        * Clean up PKGBUILD, fix internal paths to dmeventd and its helpers
+
 2009-11-27  Eric Belanger  <eric@archlinux.org>
 
 	* lvm2 2.02.56-1
